--- a/css/style.scss
+++ b/css/style.scss
@@ -4,10 +4,12 @@
     padding: 0;
 }
 
+html {
+    background-color: #ececec;
+}
+
 body {
     text-align: center;
-    height: 100vh;
-    background-color: #ececec;
 }
 
 section {
