--- a/css/style.css
+++ b/css/style.css
@@ -33,4 +33,10 @@ table {
 .container .buttons {
   display: flex;
   justify-content: center;
+}
+
+@media screen and (min-width: 640px) {
+  .container {
+    padding-top: 10rem;
+  }
 }/*# sourceMappingURL=style.css.map */
