--- a/css/style.scss
+++ b/css/style.scss
@@ -38,3 +38,9 @@ table {
         justify-content: center;
     }
 }
+
+@media screen and (min-width: 640px) {
+    .container {
+        padding-top: 10rem;
+    }
+}
